--- a/Book/selections.tex
+++ b/Book/selections.tex
@@ -64,7 +64,7 @@
 \begin{document}
 
 \input{RegExpr/regexpr}
-\input{Shells/shells}
+%\input{Shells/shells}
 \end{document}
 
 %\def\includegraphics#1{#1}
